--- a/index.html
+++ b/index.html
@@ -308,24 +308,55 @@
                 </div>
             </div>
             <div class="product">
-    <!-- Ваша карточка товара и форма -->
-  </div>
+                <!-- Ваша карточка товара и форма -->
+            </div>
 
-  <!-- Раздел FAQ -->
-  <div class="faq-container">
-    <div class="faq-button" onclick="toggleContent('buy')">Как купить?</div>
-    <div class="faq-content" id="buy">
-      Для того чтобы купить товар, вам необходимо выполнить следующие шаги: [текст ответа]
-    </div>
-    <div class="faq-button" onclick="toggleContent('delivery')">Как доставить?</div>
-    <div class="faq-content" id="delivery">
-      Мы предлагаем несколько вариантов доставки: [текст ответа]
-    </div>
-    <div class="faq-button" onclick="toggleContent('warranty')">Какая гарантия?</div>
-    <div class="faq-content" id="warranty">
-      Мы предоставляем гарантию на все наши товары. [текст ответа]
-    </div>
-  </div>
+            <!-- Раздел FAQ -->
+            <p>
+                <button class="btn btn-primary" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseWidthExample1" aria-expanded="false"
+                        aria-controls="collapseWidthExample1">
+                    Toggle width collapse
+                </button>
+            </p>
+            <div style="min-height: 120px;">
+                <div class="collapse collapse-horizontal" id="collapseWidthExample1">
+                    <div class="card card-body" style="width: 300px;">
+                        This is some placeholder content for a horizontal collapse. It's hidden by default and shown
+                        when triggered.
+                    </div>
+                </div>
+            </div>
+            <p>
+                <button class="btn btn-primary" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseWidthExample2" aria-expanded="false"
+                        aria-controls="collapseWidthExample2">
+                    Toggle width collapse
+                </button>
+            </p>
+            <div style="min-height: 120px;">
+                <div class="collapse collapse-horizontal" id="collapseWidthExample2">
+                    <div class="card card-body" style="width: 300px;">
+                        This is some placeholder content for a horizontal collapse. It's hidden by default and shown
+                        when triggered.
+                    </div>
+                </div>
+            </div>
+            <p>
+                <button class="btn btn-primary" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseWidthExample3" aria-expanded="false"
+                        aria-controls="collapseWidthExample3">
+                    Toggle width collapse
+                </button>
+            </p>
+            <div style="min-height: 120px;">
+                <div class="collapse collapse-horizontal" id="collapseWidthExample3">
+                    <div class="card card-body" style="width: 300px;">
+                        This is some placeholder content for a horizontal collapse. It's hidden by default and shown
+                        when triggered.
+                    </div>
+                </div>
+            </div>
 
 
         </main>
