--- a/index.html
+++ b/index.html
@@ -312,48 +312,60 @@
             </div>
 
             <!-- Раздел FAQ -->
-            <p>
-                <button class="btn btn-primary" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseWidthExample1" aria-expanded="false"
-                        aria-controls="collapseWidthExample1">
-                    Toggle width collapse
-                </button>
-            </p>
-            <div style="min-height: 120px;">
-                <div class="collapse collapse-horizontal" id="collapseWidthExample1">
-                    <div class="card card-body" style="width: 300px;">
-                        This is some placeholder content for a horizontal collapse. It's hidden by default and shown
-                        when triggered.
+            <h1>FAQ</h1>
+            <div class="row">
+                <div class="col">
+                    <p>
+                        <button class="btn btn-primary" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseWidthExample1" aria-expanded="false"
+                                aria-controls="collapseWidthExample1">
+                            Как купить?
+                        </button>
+                    </p>
+                    <div style="min-height: 120px;">
+                        <div class="collapse collapse-horizontal" id="collapseWidthExample1">
+                            <div class="card card-body" style="width: 300px;">
+                                This is some placeholder content for a horizontal collapse. It's hidden by default and
+                                shown
+                                when triggered.
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <p>
-                <button class="btn btn-primary" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseWidthExample2" aria-expanded="false"
-                        aria-controls="collapseWidthExample2">
-                    Toggle width collapse
-                </button>
-            </p>
-            <div style="min-height: 120px;">
-                <div class="collapse collapse-horizontal" id="collapseWidthExample2">
-                    <div class="card card-body" style="width: 300px;">
-                        This is some placeholder content for a horizontal collapse. It's hidden by default and shown
-                        when triggered.
+                <div class="col">
+                    <p>
+                        <button class="btn btn-primary" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseWidthExample2" aria-expanded="false"
+                                aria-controls="collapseWidthExample2">
+                            Как доставить?
+                        </button>
+                    </p>
+                    <div style="min-height: 120px;">
+                        <div class="collapse collapse-horizontal" id="collapseWidthExample2">
+                            <div class="card card-body" style="width: 300px;">
+                                This is some placeholder content for a horizontal collapse. It's hidden by default and
+                                shown
+                                when triggered.
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <p>
-                <button class="btn btn-primary" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseWidthExample3" aria-expanded="false"
-                        aria-controls="collapseWidthExample3">
-                    Toggle width collapse
-                </button>
-            </p>
-            <div style="min-height: 120px;">
-                <div class="collapse collapse-horizontal" id="collapseWidthExample3">
-                    <div class="card card-body" style="width: 300px;">
-                        This is some placeholder content for a horizontal collapse. It's hidden by default and shown
-                        when triggered.
+                <div class="col">
+                    <p>
+                        <button class="btn btn-primary" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseWidthExample3" aria-expanded="false"
+                                aria-controls="collapseWidthExample3">
+                            Какая гарантия?
+                        </button>
+                    </p>
+                    <div style="min-height: 120px;">
+                        <div class="collapse collapse-horizontal" id="collapseWidthExample3">
+                            <div class="card card-body" style="width: 300px;">
+                                This is some placeholder content for a horizontal collapse. It's hidden by default and
+                                shown
+                                when triggered.
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
